PR bin/43591: Jeremy Reed: make sure that the default path is always set.